# hippo_simulation

hippo_gz_plugins/: CMakeLists.txt
hippo_gz_plugins/include/: common.hpp
hippo_gz_plugins/proto/gz/hippo_gz_plugins/: range_measurement.proto  range_measurement_array.proto
hippo_gz_plugins/src/barometer/: barometer.cpp  barometer.hpp  barometer_private.cpp  barometer_private.hpp
hippo_gz_plugins/src/hydrodynamics/: CMakeLists.txt  hydrodynamics.cpp  hydrodynamics.hpp
hippo_gz_plugins/src/kinematic_control/: CMakeLists.txt  kinematic_control.cpp  kinematic_control.hpp
hippo_gz_plugins/src/odometry/: odometry.cpp  odometry.hpp  odometry_private.cpp  odometry_private.hpp
hippo_gz_plugins/src/pose/: CMakeLists.txt  pose.cpp  pose.hpp
hippo_gz_plugins/src/range_sensor/: range_sensor.cpp  range_sensor.hpp  range_sensor_private.cpp  range_sensor_private.hpp
hippo_gz_plugins/src/range_sensor_bridge/: range_sensor_bridge.cpp  range_sensor_bridge.hpp
hippo_gz_plugins/src/thruster/: thruster.cpp  thruster.hpp  thruster_private.cpp  thruster_private.hpp
hippo_sim/: CMakeLists.txt  package.xml
hippo_sim/config/: test.yaml
hippo_sim/launch/: gripper.launch.py  spawn_apriltag_floor.launch.py  spawn_bluerov.launch.py  spawn_hippocampus.launch.py  spawn_vehicle.launch.py  spawn_wall_tags.launch.py  start_gazebo.launch.py  test_gripper.launch.py  top_bluerov_complete.launch.py  top_hippocampus_complete.launch.py
hippo_sim/models/acoustic_modem/urdf/: acoustic_modem_macro.xacro
hippo_sim/models/bluerov/urdf/: bluerov.xacro  bluerov_macro.xacro  bluerov_params.xacro
hippo_sim/models/camera/urdf/: camera_macro.xacro  test.xml
hippo_sim/models/gripper/meshes/: left_jaw.stl  right_jaw.stl
hippo_sim/models/gripper/urdf/: alpha_end_effector.xacro  gripper.sdf  gripper.urdf  gripper.xacro
hippo_sim/models/hippo3/urdf/: hippo3.xacro  hippo3_params.xacro
hippo_sim/models/world/: empty.sdf
hippo_sim/scripts/: create_robot_description.py  generate_pool.py  generate_tag_poses.py  tag_bundle.yaml  tag_poses.yaml
hippo_sim/src/: spawn.cpp  static_bridge.cpp
